# run-coach-rag

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  verify-skeleton.ps1
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/web/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
apps/web/app/: page.tsx
apps/workers/: Dockerfile  pyproject.toml
apps/workers/worker/: __init__.py  celery_app.py
infra/docker/: docker-compose.dev.yml
